switch from polling to filewatching

--- a/FEMMfilelinkconfig.toml
+++ b/FEMMfilelinkconfig.toml
@@ -1,4 +1,5 @@
 # http://www.femm.info/wiki/FilelinkClient
+femmbindir = "C:/femm42/bin/"
 exe = "C:/femm42/bin/femm.exe"
 ifile = "C:/femm42/bin/ifile.txt"
 ofile = "C:/femm42/bin/ofile.txt"
